@@ -1,6 +1,35 @@
 #!/bin/sh
 
+try_mount() {
+if ! mount -o utf8 "$MOUNT_SRC" "$MOUNT_DST"; then
+    if ! mount "$MOUNT_SRC" "$MOUNT_DST"; then
+	if ! ntfs-3g "$MOUNT_SRC" "$MOUNT_DST" -o force; then
+	    if ! rm -r "$MOUNT_DST"; then
+		exit 1
+	    fi
+	fi
+    fi
+fi
+}
+
+swap_on() {
+auto_swap=`nvram_get 2860 auto_swap`
+if [ -f /bin/swapon ] && [ "$auto_swap" = "1" ]; then
+    SWAPPART=`fdisk -l | grep swap | awk {' print $1 '}`
+    if [ "$SWAPPART" != "" ]; then
+	swapon $SWAPPART > /dev/null 2>&1
+    fi
+fi
+}
+
+swap_off() {
+if [ -f /bin/swapoff ]; then
+    swapoff -a > /dev/null 2>&1
+fi
+}
+
 if [ "$ACTION" = "add" ] ; then
+    swap_on
     if [ -f /bin/blkid ]; then
 	eval "$(blkid /dev/$MDEV | sed 's/^[^ ]* //;s/\([^ ]*=\)/MDEV_\1/g')"
 	readonly MDEV_TYPE MDEV_UUID MDEV_LABEL MDEV_PATH=/dev/$MDEV
@@ -27,28 +56,17 @@ if [ "$ACTION" = "add" ] ; then
 		exit 1
 	    fi
 	fi
-	if ! mount -o utf8 "$MOUNT_SRC" "$MOUNT_DST"; then
-	    if ! mount "$MOUNT_SRC" "$MOUNT_DST"; then
-		if ! ntfs-3g "$MOUNT_SRC" "$MOUNT_DST" -o force; then
-		    if ! rm -r "$MOUNT_DST"; then
-			exit 1
-		    fi
-		fi
-	    fi
-	fi
+	try_mount
     else
-	if ! mkdir -p "/media/$MDEV"; then
+	MOUNT_SRC="/dev/$MDEV"
+	MOUNT_DST="/media/$MDEV"
+	if ! mkdir -p "$MOUNT_DST"; then
 	    exit 1
 	fi
-	if ! mount "/dev/$MDEV" "/media/$MDEV"; then
-	    if ! ntfs-3g "/dev/$MDEV" "/media/$MDEV" -o force; then
-		if ! rm -r "/media/$MDEV"; then
-		    exit 1
-		fi
-	    fi
-	fi
+	try_mount
     fi
 else
+    swap_off
     mount_point=`mount | grep $MDEV | awk '{print $3}'`
     if [ `mount | grep $MDEV | wc -l` -ge 1 ]; then
 	if ! umount "/dev/$MDEV"; then
@@ -61,4 +79,5 @@ else
 fi
 
 killall -q -SIGTTIN goahead
+
 exit 0
